--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
 
     
    
-    <script src="./js/main.js"></script>
+    <script src="https://devkadu.github.io/SpaceBattle/js/main.js"></script>
     
 </body>
 </html>
